Switch to dark color scheme

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       --text-regular: 'Computer Modern Typewriter Light', "DejaVu Sans Mono", "Andale Mono", Monaco, Courier, monospace;
       --text-bold:    'Computer Modern Typewriter', "DejaVu Sans Mono", "Andale Mono", Monaco, Courier, monospace;
 
-      --font-size: 1rem;
+      --font-size: 1.1rem;
       --font-size-2: calc(2*var(--font-size));
       --font-size-minus: calc(-1*var(--font-size));
       --font-size-minus-2: calc(-2*var(--font-size));
@@ -32,8 +32,8 @@
       --header-offset: calc(15.5 * var(--font-size));
       --header-offset-minus: calc(-1*var(--header-offset));
 
-      --text-color:#212121;
-      --bg-color: #FDFDFD;
+      --text-color: #FDFDFD;
+      --bg-color: #212121;
 
       color: var(--text-color);
       background-color: var(--bg-color);
@@ -42,7 +42,7 @@
       font-family: var(--text-regular);
       white-space: pre;
 
-      line-height: 100%;
+      line-height: 95%;
 
     }
 
@@ -72,7 +72,7 @@
         0px
         var(--font-size)
         var(--font-size-2)
-        8px
+        4px
         var(--bg-color);
 
     }
@@ -93,7 +93,7 @@
         0px
         var(--font-size-minus)
         var(--font-size-2)
-        8px
+        4px
         var(--bg-color);
 
     }
@@ -256,7 +256,7 @@ adam(1)                        Linux User's Manual                       adam(1)
 
     <em id="--shameless-geek">--shameless-geek</em>
         <em>adam</em> is a voracious consumer of science fiction, fantasy, and horror.
-        He particularly enjoys the work of Douglas <em>adam</em>s, H.P. Lovecraft, John
+        He particularly enjoys the work of Douglas Adams, H.P. Lovecraft, John
         Carpenter, and Tim Burton, loves Star Trek, and considers The Expanse
         to be one of the best television shows in recent years.
 
