Update content and styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ adam(1)                           User's Manual                          adam(1)
     <em>adam</em>  <em><a class="anchor-no-decoration" href="#--developer">[--developer]</a></em> <em><a class="anchor-no-decoration" href="#--designer">[--designer]</a></em> <em><a class="anchor-no-decoration" href="#--contributor">[--contributor]</a></em> <em><a class="anchor-no-decoration" href="#--educator">[--educator]</a></em> <em><a class="anchor-no-decoration" href="#--leader">[--leader]</a></em>
           <em><a class="anchor-no-decoration" href="#--guitarist">[--guitarist]</a></em> <em><a class="anchor-no-decoration" href="#--music-lover">[--music-lover]</a></em> <em><a class="anchor-no-decoration" href="#--dog-lover">[--dog-lover]</a></em> <em><a class="anchor-no-decoration" href="#--shameless-geek">[--shameless-geek]</a></em>
 
-                <a class="anchor-no-decoration" href="#DESCRIPTION"><em>[DESCRIPTION]</em></a>  <a class="anchor-no-decoration" href="#options"><em>[OPTIONS]</em></a>  <a class="anchor-no-decoration" href="#history"><em>[HISTORY]</em></a>  <a class="anchor-no-decoration" href="#contact"><em>[CONTACT]</em></a>       </header>
+                 <a class="anchor-no-decoration" href="#DESCRIPTION"><em>[DESCRIPTION]</em></a>  <a class="anchor-no-decoration" href="#SKILLS"><em>[SKILLS]</em></a>  <a class="anchor-no-decoration" href="#history"><em>[HISTORY]</em></a>  <a class="anchor-no-decoration" href="#contact"><em>[CONTACT]</em></a>       </header>
 <main><em class="offset-anchor" id="DESCRIPTION">DESCRIPTION</em>
     <em>adam</em> is a full-stack developer that can be easily adapted to work with a
     variety of languages and technologies. He can be used as a powerful text
@@ -36,11 +36,6 @@ adam(1)                           User's Manual                          adam(1)
     going out of his way to learn as much possible when his processing unit is
     idle, and frequently uploads his knowledge to other users when connected to
     the internet.
-
-    He is an active member of the user community for REAPER, a digital audio
-    workstation, and contributes regularly to REAPER's open-source scripting
-    community - <em>adam</em> even created the only full-featured GUI toolkit for use
-    with REAPER scripts.
 
     <em>adam</em> loves making things look neat and perfect.
 
@@ -61,7 +56,7 @@ adam(1)                           User's Manual                          adam(1)
 
     In short, installing <em>adam</em> will make both him and your team better.
 
-<em class="offset-anchor" id="options">OPTIONS</em>
+<em class="offset-anchor" id="SKILLS">SKILLS</em>
     <em class="offset-anchor" id="--developer">--developer</em>
         Attended the <a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Lighthouse Labs Web Development Bootcamp</a>, where he gained
         experience designing and building web applications using:
