Updating content and styling

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 adam(1)                           User's Manual                          adam(1)
 
 <em>NAME</em>
-    J. Adam Lovatt
+    J. Adam Lovatt - A junior web developer with experience in UI design and
+                     project management. Proficient in Javascript, HTML, CSS,
+                     and Lua
 
 <em>SYNOPSIS</em>
     <em>adam</em>  <em><a class="anchor-no-decoration" href="#--developer">[--developer]</a></em> <em><a class="anchor-no-decoration" href="#--designer">[--designer]</a></em> <em><a class="anchor-no-decoration" href="#--contributor">[--contributor]</a></em> <em><a class="anchor-no-decoration" href="#--educator">[--educator]</a></em> <em><a class="anchor-no-decoration" href="#--leader">[--leader]</a></em>
           <em><a class="anchor-no-decoration" href="#--guitarist">[--guitarist]</a></em> <em><a class="anchor-no-decoration" href="#--music-lover">[--music-lover]</a></em> <em><a class="anchor-no-decoration" href="#--dog-lover">[--dog-lover]</a></em> <em><a class="anchor-no-decoration" href="#--shameless-geek">[--shameless-geek]</a></em>
 
-                 <a class="anchor-no-decoration" href="#DESCRIPTION"><em>[DESCRIPTION]</em></a>  <a class="anchor-no-decoration" href="#SKILLS"><em>[SKILLS]</em></a>  <a class="anchor-no-decoration" href="#history"><em>[HISTORY]</em></a>  <a class="anchor-no-decoration" href="#contact"><em>[CONTACT]</em></a>       </header>
-<main><em class="offset-anchor" id="DESCRIPTION">DESCRIPTION</em>
+                   <a class="anchor-no-decoration" href="#SUMMARY"><em>[SUMMARY]</em></a>  <a class="anchor-no-decoration" href="#SKILLS"><em>[SKILLS]</em></a>  <a class="anchor-no-decoration" href="#history"><em>[HISTORY]</em></a>  <a class="anchor-no-decoration" href="#contact"><em>[CONTACT]</em></a>       </header>
+<main><em class="offset-anchor" id="SUMMARY">SUMMARY</em>
     <em>adam</em> is a full-stack developer that can be easily adapted to work with a
     variety of languages and technologies. He can be used as a powerful text
     editor, but his skills are particularly useful for designing attractive and
@@ -26,45 +28,32 @@ adam(1)                           User's Manual                          adam(1)
     of workers and improve project efficiency while reducing the amount of
     oversight necessary.
 
-    Though originally developed for use in computer programming, a series of
-    false starts found his skill set being used and refined in fields as diverse
-    as retail, the liquor industry, and most recently the commercial and
-    industrial sectors as an electrician.
-
     <em>adam</em> has been designed from the ground up to be easily expanded with new
-    tools and skills. He incorporates cutting-edge machine learning technology,
-    going out of his way to learn as much possible when his processing unit is
-    idle, and frequently uploads his knowledge to other users when connected to
-    the internet.
+    tools and skills.
 
     <em>adam</em> loves making things look neat and perfect.
 
-    <em>adam</em> likes typography, generates warnings when faced with a poorly-kerned
-    font, and raises exceptions at the incorrect use of quotation marks for
-    "emphasis" in signage.
-
-    <em>adam</em> dislikes websites that are unusable when viewed on a mobile device,
-    finds the idea of Atomic CSS intriguing, and tries to avoid the use of
-    &lt;div&gt;s where possible.
-
-    <em>adam</em> will vigorously argue in favor of "two spaces" indenting and uses
-    copious whitespace to make his code readable, but can be easily configured
-    to work with your team's preferred formatting.
-
     <em>adam</em> is eager to learn, eager to help, and eager to put his skills to use
-    making your front-end, back-end, or database look good.
+    making your app and your codebase stand out.
 
     In short, installing <em>adam</em> will make both him and your team better.
 
 <em class="offset-anchor" id="SKILLS">SKILLS</em>
     <em class="offset-anchor" id="--developer">--developer</em>
-        Attended the <a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Lighthouse Labs Web Development Bootcamp</a>, where he gained
-        experience designing and building web applications using:
+        Adept at programming in:
 
-            * Javascript            * Express.js
-            * HTML                  * MongoDB
-            * CSS                   * PostgreSQL
-            * Node.js
+            * Javascript            * SQL
+            * HTML5                 * Ruby
+            * CSS3                  * Lua
+
+        Attended the <a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Lighthouse Labs Web Development Bootcamp</a>, where he gained
+        experience building and deploying web applications using:
+
+            * JQuery                * Express
+            * React                 * MongoDB
+            * Node                  * PostgreSQL
+            * Rails                 * Heroku
+            * Mocha/Chai            * SASS
 
         Some of <em>adam</em>'s web projects include:
 
@@ -76,7 +65,6 @@ adam(1)                           User's Manual                          adam(1)
 
             * <a target="_blank" href="http://grogger.herokuapp.com/">Grogger</a>: A basic Twitter-style single page app using JQuery to
               communicate with a back-end API.
-
 
     <em class="offset-anchor" id="--designer">--designer</em>
         Designed, built, and continues to maintain <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a>, a user
